[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamagraph"
version = "1.0.0"
description = "A llama-themed knowledge graph construction tool from text"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LlamaGraph Team", email = "info@llamagraph.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]
keywords = ["knowledge graph", "nlp", "llama", "mlx"]
dependencies = [
    "rich>=10.16.2",
    "click>=8.1.3",
    "textual>=0.24.1",
    "prompt_toolkit>=3.0.38",
    "mlx>=0.0.5; platform_system=='Darwin'",
    "tqdm>=4.65.0",
    "pyfiglet>=0.8.post1",
    "colorama>=0.4.6",
    "spacy>=3.5.3",
    "networkx>=3.1",
]

[project.urls]
Homepage = "https://github.com/llamagraph/llamagraph"
Issues = "https://github.com/llamagraph/llamagraph/issues"
Documentation = "https://github.com/llamagraph/llamagraph"

[project.scripts]
llamagraph = "llamagraph.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "sphinx>=6.2.1",
    "sphinx-rtd-theme>=1.2.2",
]
viz = [
    "matplotlib>=3.7.0",
    "pyvis>=0.3.2",
    "plotly>=5.14.0",
]
api = [
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
]
all = [
    "matplotlib>=3.7.0",
    "pyvis>=0.3.2",
    "plotly>=5.14.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools]
packages = ["llamagraph"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 